examples/dhi-fpm-nginx-k8s/wsc-db.yaml
# WSC-DB (MySQL-Database)
# Source: https://github.com/Tob1as/docker-php
# other konfig example: https://github.com/Tob1as/docker-kubernetes-collection/blob/master/examples_k8s/mariadb.yaml
# 
# used Images:
# - https://dhi.io/catalog/mariadb
# - https://dhi.io/catalog/mysqld-exporter (Docs: https://github.com/prometheus/mysqld_exporter)
# 
# TODO: only do this commands after first start when using dhi mariadb image (create database and user with password from environment vars):
# kubectl -n wsc exec -it deployment/wsc-db -c mariadb -- sh -c 'mariadb -uroot -p${MARIADB_ROOT_PASSWORD} -e "CREATE DATABASE ${MARIADB_DATABASE} CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;"'
# kubectl -n wsc exec -it deployment/wsc-db -c mariadb -- sh -c 'mariadb -uroot -p${MARIADB_ROOT_PASSWORD} -e "CREATE USER \"${MARIADB_USER}\"@\"%\" IDENTIFIED BY \"${MARIADB_PASSWORD}\"; GRANT ALL PRIVILEGES ON ${MARIADB_DATABASE}.* TO \"${MARIADB_USER}\"@\"%\";"'
# kubectl -n wsc exec -it deployment/wsc-db -c mariadb -- sh -c 'mariadb -uroot -p${MARIADB_ROOT_PASSWORD} -e "CREATE USER \"${MARIADB_EXPORTER_USER}\"@\"%\" IDENTIFIED BY \"${MARIADB_EXPORTER_PASSWORD}\"; GRANT PROCESS, REPLICATION CLIENT, SELECT ON *.* TO \"${MARIADB_EXPORTER_USER}\"@\"%\";"'

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsc-db
  namespace: wsc
  labels:
    app.kubernetes.io/name: wsc-db
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: wsc
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wsc-db
      app.kubernetes.io/component: database
      app.kubernetes.io/part-of: wsc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wsc-db
        app.kubernetes.io/component: database
        app.kubernetes.io/part-of: wsc
    spec:
      imagePullSecrets:
      - name: regcred-dockerhub
      - name: regcred-dhi
      restartPolicy: Always
      securityContext:
        fsGroup: 65532
      containers:
      - name: mariadb
        image: dhi.io/mariadb:11.4-debian13 # 11.4.12-debian13
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
          name: mariadb
          protocol: TCP
        readinessProbe:
          exec:
            command: ["/bin/sh", "-c", "mariadb-admin ping -h localhost -P 3306 -u root || exit 1"]
            #command: ["/bin/sh", "-c", "mariadb-admin ping -h localhost -P 3306 --user=$MARIADB_USER --password=$MARIADB_PASSWORD || exit 1"]
          #tcpSocket:
          #  port: 3306
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "mariadb-admin ping -h localhost -P 3306 -u root || exit 1"]
            #command: ["/bin/sh", "-c", "mariadb-admin ping -h localhost -P 3306 --user=$MARIADB_USER --password=$MARIADB_PASSWORD || exit 1"]
          #tcpSocket:
          #  port: 3306
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - name: wsc-db-data
          mountPath: /var/lib/mysql
      - name: exporter
        image: dhi.io/mysqld-exporter:0.19-debian13
        imagePullPolicy: Always
        ports:
        - containerPort: 9104
          name: exporter
          protocol: TCP
        args:
        - "--web.listen-address=:9104"
        - "--web.telemetry-path=/metrics"
        - "--mysqld.address=localhost:3306"
        - "--mysqld.username=$(MARIADB_EXPORTER_USER)"
        - "--log.level=info"
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "128Mi"
            cpu: "0.5"
      volumes:
      - name: wsc-db-data
        persistentVolumeClaim:
          claimName: wsc-db-data

---

apiVersion: v1
kind: Service
metadata:
  name: wsc-db
  namespace: wsc
  labels:
    app.kubernetes.io/name: wsc-db
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: wsc
spec:
  type: ClusterIP
  ports:
  - name: "mariadb"
    protocol: TCP
    port: 3306
    targetPort: 3306
  - name: "exporter"
    protocol: TCP
    port: 9104
    targetPort: 9104
  selector: # deployment
    app.kubernetes.io/name: wsc-db
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: wsc

# Port-Forward/Tunnel to localhost
# kubectl -n wsc port-forward service/wsc-db 3306:3306
# kubectl -n wsc port-forward service/wsc-db 9104:9104

#---
#
### After this line ONLY for Monitoring !
#
#apiVersion: monitoring.coreos.com/v1
#kind: ServiceMonitor
#metadata:
#  name: wsc-db
#  namespace: wsc
#  labels:
#    app.kubernetes.io/name: wsc-db
#    app.kubernetes.io/component: database
#    app.kubernetes.io/part-of: wsc
#spec:
#  endpoints:
#  - path: /metrics
#    scheme: http
#    port: exporter # 9104
#    targetPort: 9104
#  selector:
#    matchLabels: # service
#      app.kubernetes.io/name: wsc-db
#      app.kubernetes.io/component: database
#      app.kubernetes.io/part-of: wsc
#
#---
#
## Examples: https://samber.github.io/awesome-prometheus-alerts/rules#mysql
#
#apiVersion: monitoring.coreos.com/v1
#kind: PrometheusRule
#metadata:
#  name: mysql
#  namespace: wsc
#  labels:
#    app: mysql
#spec:
#  groups:
#    - name: mysql.rules
#      rules:
#      - alert: {}
#      - alert: {}
#      - alert: {}
