examples/dhi-fpm-nginx-k8s/wsc-web.yaml
# WSC-WEB (PHP-FPM + NGINX)
# Source: https://github.com/Tob1as/docker-php
#
# used Images:
# - https://github.com/Tob1as/docker-php 
#   based on: https://dhi.io/catalog/php
# - https://dhi.io/catalog/nginx
# - https://dhi.io/catalog/nginx-exporter
#   (Docs: https://github.com/nginx/nginx-prometheus-exporter)
# - https://github.com/Tob1as/docker-tools -> php-fpm-exporter.scratch.Dockerfile
#   not DHI image, but in scratch image without shell and nobody user
#   (Docs: https://github.com/hipages/php-fpm_exporter)

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsc-web
  namespace: wsc
  labels:
    app.kubernetes.io/name: wsc-web
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: wsc
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wsc-web
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: wsc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wsc-web
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: wsc
    spec:
      imagePullSecrets:
      - name: regcred-dockerhub
      - name: regcred-dhi
      restartPolicy: Always
      securityContext:
        fsGroup: 65532
      containers:
      - name: nginx
        image: dhi.io/nginx:1.31-debian13
        imagePullPolicy: Always
        #envFrom:
        #- configMapRef:
        #    name: wsc-web-env-config
        #    optional: true
        #- secretRef:
        #    name: wsc-web-env-secret
        #    optional: true
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /nginx_ping
            port: 8080
            scheme: HTTP
          #tcpSocket:
          #  port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /nginx_ping
            port: 8080
            scheme: HTTP
          #tcpSocket:
          #  port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.5"
          limits:
            memory: "512Mi"
            cpu: "1.0"
        volumeMounts:
        - name: wsc-web-data
          mountPath: /var/www/html
          readOnly: true
        - name: nginx-config
          subPath: default.conf
          mountPath: /etc/nginx/conf.d/default.conf
          readOnly: true
      - name: php-fpm
        image: docker.io/tobi312/php:8.4-dhi-fpm-debian-wsc
        #image: docker.io/tobi312/php:8.4-dhi-fpm-alpine-wsc
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          name: php-fpm
          protocol: TCP
        - containerPort: 9001
          name: php-fpm-status
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - name: wsc-web-data
          mountPath: /var/www/html
        - name: php-fpm-config
          subPath: wsc.ini
          mountPath: /opt/php/etc/php/conf.d/60-wsc.ini
          readOnly: true
        - name: php-fpm-config
          subPath: status.conf
          mountPath: /opt/php/etc/php-fpm.d/y-status.conf
          readOnly: true
        - name: php-fpm-config
          subPath: settings.conf
          mountPath: /opt/php/etc/php-fpm.d/y-settings.conf
          readOnly: true
      # exporter
      - name: nginx-exporter
        image: dhi.io/nginx-exporter:1.5-debian13
        imagePullPolicy: Always
        ports:
        - containerPort: 9113
          name: nginx-exporter
          protocol: TCP
        args:
        - "--web.listen-address=:9113"
        - "--web.telemetry-path=/metrics"
        - "--nginx.scrape-uri=http://127.0.0.1:8080/nginx_status"
        - "--log.level=info"
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "128Mi"
            cpu: "0.5"
      - name: php-fpm-exporter
        image: docker.io/tobi312/tools:php-fpm-exporter-v2.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9253
          name: php-exporter
          protocol: TCP
        args:
        - "--web.listen-address=:9253"
        - "--web.telemetry-path=/metrics"
        - "--phpfpm.scrape-uri=tcp://127.0.0.1:9001/php_fpm_status"
        - "--phpfpm.fix-process-count=false"
        - "--log.level=info"
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "128Mi"
            cpu: "0.5"
      # helper (for "kubectl cp", tar-backups from "html"-folder, ... when using ReadWriteOnce-PVC)
      - name: helper
        image: dhi.io/alpine-base:3.24 # or: docker.io/tobi312/php:helper-alpine
        imagePullPolicy: Always
        #args: [ "tail", "-f", "/dev/null" ]
        args: ["/bin/sh", "-c", "trap exit TERM INT; sleep infinity"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "128Mi"
            cpu: "0.5"
        volumeMounts:
        - name: wsc-web-data
          mountPath: /var/www/html
          #readOnly: true
        - name: wsc-web-helper
          mountPath: /data
      #initContainers:
      #- name: wsc-setup
      #  image: docker.io/tobi312/php:dhi-helper-alpine
      #  imagePullPolicy: Always
      #  env:
      #  - name: "WSC_SETUP_ENABLED"
      #    value: "1"
      #  - name: "WSC_VERSION"
      #    value: "6.2"
      #  - name: "WSC_DEV_INSTALL_ENABLED"
      #    value: "0"
      #  args: [ "/bin/sh", "-c", "sleep 5 && /usr/local/bin/wsc-setup-preparation.sh" ]
      #  resources:
      #    requests:
      #      memory: "128Mi"
      #      cpu: "0.1"
      #    limits:
      #      memory: "128Mi"
      #      cpu: "0.1"
      #  volumeMounts:
      #  - name: wsc-test-data
      #    mountPath: /var/www/html
      volumes:
      - name: wsc-web-data
        persistentVolumeClaim:
          claimName: wsc-web-data
      - name: nginx-config
        configMap:
          name: wsc-web-file-config-nginx
      - name: php-fpm-config
        configMap:
          name: wsc-web-file-config-php-fpm
      # helper
      - name: wsc-web-helper
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: wsc-web
  namespace: wsc
  labels:
    app.kubernetes.io/name: wsc-web
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: wsc
spec:
  type: ClusterIP
  ports:
  - name: "http"
    protocol: TCP
    port: 8080
    targetPort: 8080
  #- name: "fcgi"
  #  protocol: TCP
  #  port: 9000
  #  targetPort: php-fpm # 9000
  #- name: "fcgi-status"
  #  protocol: TCP
  #  port: 9001
  #  targetPort: php-fpm-status # 9001
  - name: "nginx-exporter"
    protocol: TCP
    port: 9113
    targetPort: 9113
  - name: "php-exporter"
    protocol: TCP
    port: 9253
    targetPort: 9253
  selector: # deployment
    app.kubernetes.io/name: wsc-web
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: wsc

# Port-Forward/Tunnel to localhost
# kubectl -n wsc port-forward service/wsc-web 8080:8080
# kubectl -n wsc port-forward service/wsc-web 9113:9113
# kubectl -n wsc port-forward service/wsc-web 9253:9253

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsc-web
  namespace: wsc
  labels:
    app.kubernetes.io/name: wsc-web
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: wsc
  annotations:
    ## https://cert-manager.io/docs/
    #cert-manager.io/cluster-issuer: ingress-tls-secret
    #cert-manager.io/acme-challenge-type: http01
    ## NGINX
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    ## Traefik
    #traefik.ingress.kubernetes.io/router.middlewares: 'wsc-https-redirectscheme@kubernetescrd'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  #ingressClassName: nginx # nginx or traefik or in future "Kubernetes Gateway API"
  tls:
  - hosts:
    - example.com
    secretName: ingress-tls-secret
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: wsc-web
            port:
              #name: http
              number: 8080

#---
#
## convert certs file to bas64 (linux shell):
## for i in $(find . -type f -regex ".*/.*\.\(crt\|key\|pem\)"); do echo -e "\nEncode-File $i:" ; cat $i | base64 -w0 ; done > ssl_convertinbase64.txt
#
#apiVersion: v1
#kind: Secret
#metadata:
#  name: ingress-tls-secret
#  namespace: wsc
#type: kubernetes.io/tls
#data:
#  tls.crt: <ssl.crt>
#  tls.key: <ssl.key

#---
## redirect http to https
#
#apiVersion: traefik.io/v1alpha1
#kind: Middleware
#metadata:
#  name: https-redirectscheme
#  namespace: wsc
#spec:
#  redirectScheme:
#    scheme: https
#    #port: "443"
#    #permanent: true

#---
#
### After this line ONLY for Monitoring !
#
#apiVersion: monitoring.coreos.com/v1
#kind: ServiceMonitor
#metadata:
#  name: wsc-web
#  namespace: wsc
#  labels:
#    app.kubernetes.io/name: wsc-web
#    app.kubernetes.io/component: server
#    app.kubernetes.io/part-of: wsc
#spec:
#  endpoints:
#  - path: /metrics
#    scheme: http
#    port: nginx-exporter # 9113
#    targetPort: 9113
#  - path: /metrics
#    scheme: http
#    port: php-exporter # 9253
#    targetPort: 9253
#  selector:
#    matchLabels: # service
#      app.kubernetes.io/name: wsc-web
#      app.kubernetes.io/component: server
#      app.kubernetes.io/part-of: wsc
